# Minimum-annual-snow-cover-fraction-from-Sentinel-2-via-OpenEO

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
data/: perito_moreno_glacier.geojson
glacier_snow_analysis/: __init__.py  cli.py  config.py  connection.py  glacier_mask.py  logging_config.py  postprocessing.py  retry.py  snow_analysis.py  visualization.py
tests/: conftest.py  test_config.py  test_glacier_mask.py  test_postprocessing.py  test_retry.py
